@@ -4,6 +4,8 @@ Revision history for JSON-Schema-Draft201909
           - better normalization of uris in errors
           - now detecting infinite loops separately from deep traversal
           - optionally collect annotations
+          - support for the "unevaluatedItems" and "unevaluatedProperties"
+            keywords
 
 0.010     2020-07-23 16:50:18Z
           - fixed error generation for validator keywords with numeric
